option('tests', type: 'boolean', value: true,
    description: 'build unit tests')
option('tests-python', type: 'boolean', value: true,
    description: 'build unit tests for the python module')
option('python-bindings', type: 'feature', value: 'auto',
    description: 'build python bindings')
option('docs', type: 'feature', value: 'auto',
    description: 'build documentation')
